Commit user renamed as  app-user-kittens/UserKittens

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
 <section class="main-grid-container">
   <app-kittens class="grid-itemList"></app-kittens>
-  <app-user class="grid-itemUser"></app-user>
+  <app-user-kittens class="grid-itemUser"></app-user-kittens>
 </section>
