--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -5,7 +5,7 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 78vh; // Parameter to review
+  height: 78vh;
   max-width: 1200px;
   margin: 0 auto;
 }
