Commit overflow on app.main section

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -33,8 +33,11 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 100%;
+    height: 70vh;
     min-height: 77vh;
+
+    overflow-x: hidden; /* Hide horizontal scrollbar */
+    overflow-y: scroll; /* Add vertical scrollbar */
 }
 
 .app-footer {
