--- a/src/app/components/kitten/kitten.component.scss
+++ b/src/app/components/kitten/kitten.component.scss
@@ -41,21 +41,18 @@
     }
 
 }
-
-@media(hover: hover) and (pointer: fine) {
-    img:focus {
+@media screen and (max-width: 992px) and (hover: hover) and (pointer: fine) {
+    img:hover {
         width: 20rem;
         transition: width 5s linear 0;
     }
 
-    :focus+span {
+    :hover+span {
         width: 20rem;
         visibility: visible;
         font-size: 1rem;
     }
 }
-
-
 
 @media screen and (min-width: 992px) {
     .kittenCard {
