Commit click on the message to adopt

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -36,8 +36,8 @@
     height: 70vh;
     min-height: 77vh;
 
-    overflow-x: hidden; /* Hide horizontal scrollbar */
-    overflow-y: scroll; /* Add vertical scrollbar */
+    overflow-x: hidden;
+    overflow-y: scroll; 
 }
 
 .app-footer {
