--- a/src/app/components/kitten/kitten.component.html
+++ b/src/app/components/kitten/kitten.component.html
@@ -3,10 +3,11 @@
 
 <div class="kittenCard">
         <img src="{{kittenCard.image}}" alt="Photo {{kittenCard.name}}">
-    <span>
+    <span><button>
         <p><em class="pem">Coucou,</em></p>
         <p>Je suis <em class="pem">{{kittenCard.name}}</em>
             , au poste {{kittenCard.id}}.</p>
         <p>Né de race {{kittenCard.race}}, le {{kittenCard.birthday}}. 😀</p>
-    </span>
+    </button>
+</span>
 </div>
