Commit button adopt style

--- a/src/app/components/kitten/kitten.component.html
+++ b/src/app/components/kitten/kitten.component.html
@@ -1,13 +1,13 @@
-
 <h2>Carte personnelle</h2>
 
 <div class="kittenCard">
-        <img src="{{kittenCard.image}}" alt="Photo {{kittenCard.name}}">
-    <span><button>
-        <p><em class="pem">Coucou,</em></p>
-        <p>Je suis <em class="pem">{{kittenCard.name}}</em>
-            , au poste {{kittenCard.id}}.</p>
-        <p>Né de race {{kittenCard.race}}, le {{kittenCard.birthday}}. 😀</p>
-    </button>
-</span>
+    <img src="{{kittenCard.image}}" alt="Photo {{kittenCard.name}}">
+    <span>
+        <button class="btn-adopt">
+            <p><em class="pem">Coucou,</em></p>
+            <p>Je suis <em class="pem">{{kittenCard.name}}</em>
+                , au poste {{kittenCard.id}}.</p>
+            <p>Né de race {{kittenCard.race}}, le {{kittenCard.birthday}}. 😀</p>
+        </button>
+    </span>
 </div>
