--- a/src/app/components/userkittens/userkittens.component.html
+++ b/src/app/components/userkittens/userkittens.component.html
@@ -2,15 +2,15 @@
 <section class="grid-itemUser">
 
     <div class="grid-itemUser-UserKittens-Container">
-    <h3>Section Utilisateur</h3>
+    <h1>Section Utilisateur</h1>
 <dfn>Mes châtons</dfn>
-        <div class="grid-itemUser-kittenList-Container">
-            @for (kitten of getServiceKittenAdoptedKitten(); track $index) {
-            <div class="grid-itemUser-kittenCard-Container">
+        <ul class="grid-itemUser-kittenList-Container">
+            @for (kitten of getAdoptedKittens(); track $index) {
+            <li class="grid-itemUser-kittenCard-Container">
                 <app-kitten [kittenCard]="kitten"></app-kitten>
-            </div>
+            </li>
             }
-        </div>
+        </ul>
 
     </div>
 </section>
